--- a/latihan.html
+++ b/latihan.html
@@ -4,15 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML</title>
+    <title>Jurnalnita</title>
     <link rel="stylesheet" href="assets/latihan.css">
 </head>
 <body>
-    <p>About HTML</p>
-    <div class="text">
-        <p id="a"> Hypertext Markup Language adalah bahasa markah standar untuk dokumen yang dirancang 
-            untuk ditampilkan di peramban internet. Ini dapat dibantu oleh teknologi 
-            seperti Cascading Style Sheets dan bahasa scripting seperti JavaScript dan VBScript.</p>
+    <header>
+    <h1>Jurnalnita</h1>
+    <div class="nav_bar_menu">
+        <nav class="navigation"></nav>
+        <ul id="a"> 
+            <li><a class="list active" href="dashboard.html">Home</a></li>
+            <li><a class="list" href="about.html">About</a></li>
+            <li><a class="list" href="blog.html">Blog</a></li>
+            <li><a class="list" href="port.html">Portfolio</a></li>
+            <li><a class="list" href="contact.html">Contact Me</a></li>
+        </ul>
+    </nav>
     </div>
+</div>
+<br> 
+<br>
+<br>
+<br>
+<header style="text-align: center;">
+    <img src="nita.jpeg" width="200" height="200"></p>
+</header>
+<div class="text" style="text-align:center">
+    <p> Welcome to my website!</p>
+</div>
+<div class="sosmed">
+    <img src="gmail.svg" alt="">
+    <a href="mailto:amalia.nita22@gmail.com" target="_blank">amalia.nita22@gmail.com</a>
+    <br><br>
+    <img src="whatsapp.svg" alt="">
+    <a href="https://api.whatsapp.com/send?phone=083821664438" target="_blank">083821664438</a>
+    <p>contact me yaw:)</p>
+</div>
+</header>
 </body>
 </html>
